fix: contrast issues

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin focus($width: 2px, $radius: 0px, $color: #209cee, $inset: $width) {
+@mixin focus($width: 2px, $radius: 0px, $color: #0a5a8f, $inset: $width) {
   position: relative;
   border-radius: $radius;
   &::before {
